<resources>
    <string name="app_name">Automobile</string>
    <string name="home">home</string>
    <string name="cart">cart</string>
    <string name="workshop">workshop</string>
    <string name="favorites">favorites</string>
    <string name="profile">profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_product">New</string>
    <string name="card_number">* * * * * * * * * * * * 3947</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="use_as_default_payment_method">Use as default payment method</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_new_card">Add new Card</string>
    <string name="add_card">Add Card</string>
    <string name="empty_favourite">Empty Favourite</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="card_number_star">**** **** **** </string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="shop">Shop</string>
    <string name="bag">Bag</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="password_error">Password Error</string>
    <string name="password">Password</string>
    <string name="email_error">Email Error</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="try_again">Try Again</string>
    <string name="resend_e_mail">Resend E-mail</string>
    <string name="add">add</string>
    <string name="buy_now">Buy Now</string>
    <string name="logo">logo</string>
    <string name="upload_a_photo">Upload a Photo</string>
    <string name="search_for_an_outfit_by_taking_a_photo_or_uploading_an_image">Search for an outfit by taking a photo or uploading an image</string>
    <string name="visual_search">Visual Search</string>
    <string name="back">back</string>
    <string name="no_cards">You Have no Cards.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="send_email">send email</string>
    <string name="dismiss">dismiss</string>
    <string name="web_client_id">"512708520760-lkctl28fabi3l1q659ujh0l4g2ifc9qr.apps.googleusercontent.com"</string>
    <string name="customer_loader">loader</string>
    <string name="please_wait">Please wait</string>
    <string name="floating_button">floating button</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="brand_name">Brand Name</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="_10">-10%</string>
    <string name="product_image">product image</string>
    <string name="check">Check</string>
    <string name="cover_page">cover page</string>
    <string name="product_sale">Product Sale</string>
    <string name="select_and_order">Select and order</string>
    <string name="view_all">View all</string>
    <string name="mortor_parts">Motor parts</string>
    <string name="motor_parts">Motor accessories</string>
    <string name="car_accessories">Car accessories</string>
    <string name="please_enter_your_email_for_password_reset">Please enter your email for password reset.</string>
    <string name="inbox_message">inbox message</string>
    <string name="open_mail">Open mail</string>
    <string name="check_your_email_password_reset">Check your email for password reset</string>
    <string name="password_reset">Password reset successful</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already Have an account? </string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full name</string>
    <string name="or">or</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_details">Product Details</string>
    <string name="add_your_cart">Add Your Cart</string>
    <string name="ratings">Ratings</string>
    <string name="recommended">Recommended</string>
    <string name="shipping_info">Shipping info</string>
    <string name="profile_email">Profile Email</string>
    <string name="my_orders">My Orders</string>
    <string name="shipping_addresses">Shipping addresses</string>
    <string name="you_have_no_cart">You Have no cart</string>
    <string name="promo_codes">Promo codes</string>
    <string name="settings">Settings</string>
    <string name="google_logo">google logo</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="first_name">First name</string>
    <string name="my_tool_box">My tool box</string>
    <string name="total_amount">Total amount:</string>
    <string name="ghc_120">*Ghc 120</string>
    <string name="checkout">Checkout</string>
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="ghc_0_00">*Ghc 0.00</string>
    <string name="name">Name</string>
    <string name="_14">14</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="pick_place">Search area for a workshop</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="search_place_for_shop">Search place for shop</string>
    <string name="place_around_you">Place around you</string>
    <string name="region">Region</string>
    <string name="_0_00_km">0.00 Km</string>
    <string name="shop_name">Shop name</string>
    <string name="_00_00_hrs">00:00 hrs</string>
    <string name="shop_icon">shop_icon</string>
    <string name="categories">Categories</string>
    <string name="payment">Payment</string>
    <string name="proceed">Proceed</string>
    <string name="shipping_address">Shipping address</string>
    <string name="change">change</string>
    <string name="payment_method">Payment method</string>
    <string name="all_payments_are_secured_and_encrypted">All payments are secured and encrypted</string>
    <string name="credit_cards">Credit cards</string>
    <string name="paypal">Paypal</string>
    <string name="google_pay">Google pay</string>
    <string name="card_details">Card details</string>
    <string name="name_on_card">Name on card</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_your_card_number">Enter your card number</string>
    <string name="cvv">CVV</string>
    <string name="arrival_time">Arrival time</string>
    <string name="item_count">Item count</string>
    <string name="ghc_90">GHC 90</string>
    <string name="order">Order</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="ghc_30">*GHC 30</string>
    <string name="summary">Summary</string>
    <string name="pay_now">Pay now</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="order_details">Order details</string>
    <string name="order_completed">Order completed</string>
    <string name="order_number_9876543">Order number: #9876543</string>
    <string name="time_placed">Time placed: 1/07/2022 12:45 GMT</string>
    <string name="billing">Billing</string>
    <string name="billingText">Peacemaker Otoo \norders@banuelson.com \n+49 179 111 1010 \nLeibnizstraße 16, Wohnheim 6, No: 8X \nClausthal-Zellerfeld, Germany</string>
    <string name="order_items">Order Items</string>
    <string name="last_name">Last name</string>
    <string name="you_may_also_like_this">You may also Like this</string>
    <string name="wheels_tyres">Wheels and Tyres</string>
    <string name="fan_belts">Fan Belts</string>
    <string name="engine_block">Engine Block</string>
    <string name="light_systems">Light Systems</string>
    <string name="brakes">Brakes</string>
    <string name="tools">Tools</string>
    <string name="batteries">Batteries</string>
</resources>