<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/shop_icon"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/shop_icon" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/_0_00_km"
        android:textColor="@color/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="100dp"
        android:text="@string/shop_name"
        app:layout_constraintEnd_toStartOf="@+id/distance"
        app:layout_constraintTop_toTopOf="@+id/shop_icon" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/_00_00_hrs"
        app:layout_constraintStart_toStartOf="@+id/shop_name"
        app:layout_constraintTop_toBottomOf="@+id/shop_name" />


</androidx.constraintlayout.widget.ConstraintLayout>