<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@color/background">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="180dp"
       android:layout_height="@dimen/_100sdp"
        app:cardBackgroundColor="@color/backgroundAd"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/productImage_singleProduct"
            android:layout_width="match_parent"
            android:background="@drawable/loading_animation"
            android:layout_height="match_parent"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/circle_bg"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5">

        <ImageView
            android:id="@+id/productAddToFav_singleProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/favorites"
            android:padding="15dp"
            android:src="@drawable/baseline_delete"
            app:tint="@color/mainText" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:background="@color/background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <RatingBar
            android:id="@+id/productRating"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:numStars="5"
            android:rating="5"
            android:scaleX=".4"
            android:scaleY=".4"
            android:transformPivotX="0dp"
            android:transformPivotY="15dp" />

        <TextView
            android:id="@+id/productBrandName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_light"
            android:maxLines="1"
            android:text="@string/brand_name"
            android:textColor="@color/textAd"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_regular"
            android:maxLines="1"
            android:text="@string/product_name"
            android:textColor="@color/mainText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/metropolis_light"
            android:maxLines="1"
            android:text="@string/product_price"
            android:textColor="@color/primary"
            android:textSize="13sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/discount"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/discount_bg"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/discountTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/metropolis_semibold"
            android:gravity="center"
            android:text="@string/_10"
            android:textColor="@color/white"
            android:textSize="11sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>