<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_300sdp">


    <ImageView
        android:id="@+id/coverPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cover_page"
        android:scaleType="centerCrop"
        android:background="@drawable/loading_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/coverPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/productNoteCover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/metropolis_semibold"
            android:maxLines="2"
            android:text="@string/product_sale"
            android:textColor="@color/mainText"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/productCheck_coverPage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/check" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>