<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp"
    tools:context=".view.fragments.LoginFragment">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/login"
        android:textColor="@color/mainText"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailError"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:boxStrokeColor="@color/mainText"
            app:boxStrokeErrorColor="@color/primary"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/primary"
            app:hintTextColor="@color/mainText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:drawableEnd="@null"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/mainText"
                android:textSize="@dimen/_11ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordError"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:boxStrokeColor="@color/mainText"
            app:boxStrokeErrorColor="@color/primary"
            app:boxStrokeWidthFocused="1dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/mainText"
            app:hintTextColor="@color/mainText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:drawableEnd="@null"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="@dimen/_5sdp"
                android:textColor="@color/mainText"
                android:textColorHint="@color/mainText"
                android:textSize="@dimen/_11ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgottenPassTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="@font/metropolis_regular"
            android:gravity="end"
            android:text="@string/forgotten_password"
            android:textColor="@color/mainText"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/btn_bg"
            android:elevation="10dp"
            android:fontFamily="@font/metropolis_regular"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metropolis_regular"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/mainText"
                android:textSize="@dimen/_11ssp" />

            <TextView
                android:id="@+id/signUpTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/metropolis_regular"
                android:paddingStart="@dimen/_2sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:text="@string/sign_up"
                android:textColor="@color/primary"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/google_signIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/border_stroke"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp"
                android:contentDescription="@string/google_logo"
                android:src="@drawable/google_logo" />

            <TextView
                android:id="@+id/login_with_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:fontFamily="@font/metropolis_bold"
                android:letterSpacing="0.05"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/mainText"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/normal_loader"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintHorizontal_bias="0.5"
        android:contentDescription="@string/app_name"
        android:src="@drawable/loading_animation"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>